--- a/WebApp/Views/Application/_ConfirmWithdrawModal.cshtml
+++ b/WebApp/Views/Application/_ConfirmWithdrawModal.cshtml
@@ -18,7 +18,7 @@
 
             <div class="modal-footer border-0 mt-2">
                 <button type="button" class="min-w-[128px] rounded-md bg-[#6c757d] px-3 py-2 font-medium text-white hover:bg-[#939BA2]" id="cancelWithdrawApplication" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747]" id="submitWithdrawApplication">Withdraw</button>
+                <button type="submit" class="min-w-[128px] rounded-md bg-[#7A1515] px-3 py-2 font-medium text-white hover:bg-[#A04747] disabled:bg-gray-400" id="submitWithdrawApplication">Withdraw</button>
             </div>
         </div>
     </div>
