--- a/WebApp/Views/Job/_InfoTab.cshtml
+++ b/WebApp/Views/Job/_InfoTab.cshtml
@@ -17,7 +17,7 @@
     }
 }
 
-<div class="overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-md">
+<div class="min-w-72 overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-md">
     <div class="flex items-center justify-between pb-2 text-sm font-normal">
         <div class="flex items-center">
             @Html.Raw(LocationIcon)
