--- a/WebApp/Views/Job/Filter.cshtml
+++ b/WebApp/Views/Job/Filter.cshtml
@@ -24,7 +24,7 @@
 }
 
 <!-- Sidebar Filter -->
-<div class="h-screen w-80 rounded-lg border-gray-200 bg-white p-6 shadow-md">
+<div class="mb-4 max-h-full min-h-full w-80 rounded-lg border-gray-200 bg-white p-6 shadow-md">
     
     <div class="mb-6 flex items-center justify-between">
         <div class="text-xl font-semibold text-gray-800">Filter Jobs</div>
