--- a/WebApp/Views/Job/_InfoTab.cshtml
+++ b/WebApp/Views/Job/_InfoTab.cshtml
@@ -46,7 +46,7 @@
         <li class="gap-2">
             <div class="flex items-center">
                 @Html.Raw(ScheduleIcon)
-                <span class="pl-2 pr-1 font-semibold">Schedule:</span>
+                <span class="pl-2 pr-1 font-semibold">Schedule (Weekly):</span>
             </div>
             <span class="pl-8">@Model.Schedule</span>
         </li>
