--- a/WebApp/Views/Shared/_Header.cshtml
+++ b/WebApp/Views/Shared/_Header.cshtml
@@ -32,11 +32,11 @@
                     Find Job
                     <span class="group-hover:w-full absolute bottom-0 left-0 h-0.5 w-0 bg-[#A04747] transition-all duration-300 ease-in-out"></span>
                 </a>
-                <a href="@Url.Action("Contact", "Home")" class="group relative inline-flex items-center font-semibold text-[#7A1515] hover:text-[#A04747] hover:no-underline">
+                <a href="@Url.Action("", "")" class="group relative inline-flex items-center font-semibold text-[#7A1515] hover:text-[#A04747] hover:no-underline">
                     Contact
                     <span class="group-hover:w-full absolute bottom-0 left-0 h-0.5 w-0 bg-[#A04747] transition-all duration-300 ease-in-out"></span>
                 </a>
-                <a href="@Url.Action("About", "Home")" class="group relative inline-flex items-center font-semibold text-[#7A1515] hover:text-[#A04747] hover:no-underline">
+                <a href="@Url.Action("", "")" class="group relative inline-flex items-center font-semibold text-[#7A1515] hover:text-[#A04747] hover:no-underline">
                     About
                     <span class="group-hover:w-full absolute bottom-0 left-0 h-0.5 w-0 bg-[#A04747] transition-all duration-300 ease-in-out"></span>
                 </a>
