--- a/WebApp/Views/Application/_ApplicationTableBody.cshtml
+++ b/WebApp/Views/Application/_ApplicationTableBody.cshtml
@@ -25,7 +25,7 @@
 {
     <tr>
         <td colspan="10" class="whitespace-nowrap px-6 py-3 text-center text-sm text-[#625f5f]">
-            @(hasFilters ? "No applications found" : "No applications found matching the criteria")
+            @(hasFilters ? "No applications found matching the criteria" : "No applications found")
         </td>
     </tr>
 }
