--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -71,12 +71,12 @@
         </div>
     </form>
 
-    <div class="mx-auto mt-6 flex max-w-7xl gap-6 px-6">
+    <div class="mx-auto mt-6 flex max-h-[80vh] max-w-7xl gap-6 px-6">
         <!-- Filter Sidebar -->
         @await Html.PartialAsync("Filter", dropdownPopulation)
         
         <!-- Job Listings Section -->
-        <div class="w-full rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
+        <div class="mb-4 min-h-full w-full overflow-auto rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
             <div class="mb-4 flex items-center justify-between">
                 <h2 class="text-3xl font-bold text-gray-800">Recommended Jobs</h2>
                 
@@ -84,10 +84,10 @@
                     <label for="sortBy" class="pt-2 text-sm font-medium text-gray-700">Sort By:</label>                   
                         <select id="sortBy" name="sortBy" onchange="this.form.submit()" class="rounded-md border border-gray-300 p-2">
                         <option value="match" selected=@(sortBy == "match" || string.IsNullOrEmpty(sortBy))>Match Percent</option>
-                        <option value="salary_asc" selected=@(sortBy == "salary_asc")>Salary (Lowest First)</option>
                         <option value="salary_desc" selected=@(sortBy == "salary_desc")>Salary (Highest First)</option>
-                        <option value="created_asc" selected=@(sortBy == "created_asc")>Posted Date (Oldest First)</option>
+                        <option value="salary_asc" selected=@(sortBy == "salary_asc")>Salary (Lowest First)</option>
                         <option value="created_desc" selected=@(sortBy == "created_desc")>Posted Date (Newest First)</option>
+                        <option value="created_asc" selected=@(sortBy == "created_asc")>Posted Date (Oldest First)</option>
                     </select>
                     <input type="hidden" name="search" value="@search" />
                     <input type="hidden" name="filterBySalary" value="@filterBySalary" />
@@ -152,15 +152,26 @@
                                     <div>
                                         <span class="text-sm font-bold text-gray-700">@(job.Salary == "Php 0 - Php 0" ? "Unpaid" : job.Salary)</span>
                                     </div>
-                                    <p class="pt-2 text-sm text-gray-600">@job.Description</p>
+                                    <p class="pt-2 text-sm text-gray-600">
+                                        @{
+                                            var originalDetails = job.Description;
+                                            var details = originalDetails?.Length > 500 ? originalDetails?.Substring(0, 500) + "..." : originalDetails;
+                                        }
+                                        <text title="@originalDetails">@Html.Raw(details)</text>
+                                    </p>
 
                                     <!-- Job Skills -->
                                     <div class="mb-1 flex flex-wrap space-x-2">
                                         @if(job.Skills.Any())
                                         {
-                                            foreach(var skill in job.Skills)
+                                            var displayedSkills = job.Skills.Take(5);
+                                            foreach (var skill in displayedSkills)
                                             {
                                                <div class="pb-2"><span class="rounded-full border px-2 py-1 text-xs text-gray-500">@skill.Name.ToUpper()</span> </div>
+                                            }
+                                            @if (job.Skills.Count() > 5)
+                                            {
+                                                <div class="pb-2"><span class="rounded-full border px-2 py-1 text-xs text-gray-500">...</span></div>
                                             }
                                         }
                                         else
