Address usability testing concerns: - display quarantine page link on registration - make the links on emails clickable - disable rate limits on login (temporary) - clear display of unavailable sections in user settings

--- a/WebApp/Views/UserProfile/_QualificationsSection.cshtml
+++ b/WebApp/Views/UserProfile/_QualificationsSection.cshtml
@@ -13,7 +13,8 @@
         </div>
 
         <div class="mb-4 space-y-2">
-            <!-- Cultural Skills -->
+            --- Section Unavailable ---
+            @*<!-- Cultural Skills -->
             <div class="flex-1">
                 <label class="block text-sm font-medium text-gray-700">Cultural/Soft Skills</label>
                 <input placeholder="Open Mindset, Communication, Leadership" type="text" id="createJobSkillsSInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
@@ -33,9 +34,9 @@
                 <input placeholder="Microsoft Azure Certification, CompTIA CASP+ CE" type="text" id="createJobSkillsCInput" class="block w-full rounded-lg border border-gray-300 p-2 text-sm" />
                 <div type="hidden" id="skillsCHiddenInputs" name="SkillsC"></div>
                 <span class="text-sm text-red-500" id="skillsCValidation"></span>
-            </div>
+            </div>*@
         </div>
         <hr />
-        <div>resume here</div>
+        <div>--- Resume Here ---</div>
     </form>
 </div>
