--- a/WebApp/Views/Application/ViewApplication.cshtml
+++ b/WebApp/Views/Application/ViewApplication.cshtml
@@ -13,7 +13,7 @@
     bool isClosed = Model.ApplicationStatusTypeId == "Rejected" || Model.ApplicationStatusTypeId == "Withdrawn" || Model.ApplicationStatusTypeId == "Accepted";
 }
 
-<div class="flex flex-col bg-gray-100 @(User.IsInRole("Applicant") ? "my-20  max-w-7xl max-h-screen mx-auto" : "size-full")">
+<div class="flex flex-col bg-gray-100 @(User.IsInRole("Applicant") ? "my-20 max-w-7xl max-h-screen mx-auto" : "size-full")">
     <div class="mb-2 w-full justify-between">
         <div class="w-full rounded-lg bg-white p-6 px-12 shadow-sm">
             <div class="flex justify-between">
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Main Content with Sidebar -->
-    <div class="flex flex-grow">
+    <div class="max-h-[calc(100%-100px)] flex flex-grow">
         <!-- Messages Section -->
         <div class="mr-2 w-full rounded-lg border border-gray-200 bg-white p-6 shadow-sm">
             <h2 class="mb-4 pl-4 text-2xl font-bold text-[#625f5f]">Chat History</h2>
